--- a/templates/error.html
+++ b/templates/error.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}" type="image/x-icon" />
     <link rel="icon" href="{{url_for('static', filename='favicon.ico')}}" type="image/x-icon" />
 
-    <title>Personal Diary | Sifa</title>
+    <title>Dictionary Sparta | Sifa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
